@@ -1,9 +1,10 @@
-2020-06-03  Stanislas Rolland  <typo3(arobas)sjbr.ca>
+2020-06-03  Stanislas Rolland  <typo32020(arobas)sjbr.ca>
 
 	* Resolves #91250: Add php configuration file for Extbase persistence mapping
 	* Resolves #90274: Add support for PHP 7.4
 	* Resolves #91251: Add Symfony dependency injection configuration
 	* Resolves #91567: Add php configuration file for Extbase persistence mapping to generated language pack
+	* Resolves #91575: Use Symfony expression language for TypoScript conditions
 
 2020-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
